--- a/public/index.html
+++ b/public/index.html
@@ -117,9 +117,7 @@ body {
     color: rgba(255, 255, 255, 1);
   }
 
-  .addToCartBtn{
-  margin-left:0px
-}
+ 
 }
 
 .sticky {
@@ -241,11 +239,42 @@ img{
 .button{
   left:20%;
 }
+ .description, .detail-price, #additional {
+  margin-left: 40%;
+}
+.description, .detail-price{
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.addToCartBtn{
-  margin-left:-50%;
+.btn-addToCart{
+  margin-left: 18%;
+
 }
+.addToCartBtn{
+  width: 170%;
+ 
+}
+.btn-addToCart-cart{
+  margin-left: -40%;
+
+}
+
+#product-table{
+margin-left: 20%;
+
+}
+}
+
+.mainPageImage{
+width:18%;
+cursor:pointer;
+ height:10%;
+  display:inline-block;
+   margin:10px;
+  border-radius:5px;
+}
+
 
 
 .card {
@@ -298,6 +327,11 @@ img{
 
 }
 
+.mainPageImage{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+
+}
 .card-container {
   display: flex;
   flex-flow: row;
@@ -342,6 +376,47 @@ color: rebeccapurple;
     padding: 1.4rem 3rem;
     background: orange;
     color: white;
+    width: 25%;
+
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+    font-weight: 400;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    /*Add later when we use this for the button in form*/
+    border: none;
+    cursor: pointer;
+}
+
+.btn-addToCart-cart{
+  font-size: 1.6rem;
+    padding: 1.4rem 3rem;
+    background: orange;
+    color: white;
+
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+    font-weight: 400;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    /*Add later when we use this for the button in form*/
+    border: none;
+    cursor: pointer;
+}
+
+.btn-addToCart-checkout{
+  font-size: 1.6rem;
+    padding: 1.4rem 3rem;
+    background: silver;
+    color: black;
 
     text-transform: uppercase;
     display: inline-block;
